Removed bug after shifting to VS

--- a/smarter-tasks/src/index.css
+++ b/smarter-tasks/src/index.css
@@ -6,6 +6,6 @@ body {
   background-color: #ede9d5;
 }
 .status {
-  background-color: #e7ab9a
+  background-color: #e7ab9a;
 }
 
